upload my solution without using regex. did not finish highlighting input values

--- a/06 - Type Ahead/index-START.html
+++ b/06 - Type Ahead/index-START.html
@@ -1,23 +1,62 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Type Ahead 👀</title>
-  <link rel="stylesheet" href="style.css">
-  <link rel="icon" href="https://fav.farm/🔥" />
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <title>Type Ahead 👀</title>
+    <link rel="stylesheet" href="style.css" />
+    <link rel="icon" href="https://fav.farm/🔥" />
+  </head>
+  <body>
+    <form class="search-form">
+      <input type="text" class="search" placeholder="City or State" />
+      <ul class="suggestions">
+        <li>Filter for a city</li>
+        <li>or a state</li>
+      </ul>
+    </form>
+    <script>
+      const endpoint =
+        "https://gist.githubusercontent.com/Miserlou/c5cd8364bf9b2420bb29/raw/2bf258763cdddd704f8ffd3ea9a3e81d25e2c6f6/cities.json";
 
-  <form class="search-form">
-    <input type="text" class="search" placeholder="City or State">
-    <ul class="suggestions">
-      <li>Filter for a city</li>
-      <li>or a state</li>
-    </ul>
-  </form>
-<script>
-const endpoint = 'https://gist.githubusercontent.com/Miserlou/c5cd8364bf9b2420bb29/raw/2bf258763cdddd704f8ffd3ea9a3e81d25e2c6f6/cities.json';
+      let locations = [];
+      let population = [];
+      const input = document.querySelector(".search");
+      const list = document.querySelector(".suggestions");
 
-</script>
-</body>
+      fetch(endpoint).then((res) => {
+        return res
+          .json()
+          .then((data) => {
+            locations.push(...data);
+            population.push(...data.map((item) => item.population));
+          })
+          .catch((err) => {
+            console.log(err);
+          });
+      });
+
+      function handleMatch(e) {
+        const inputValue = document
+          .querySelector(".search")
+          .value.toLowerCase();
+
+        const matches =
+          locations.filter((item) =>
+            item.city.toLowerCase().includes(inputValue)
+          ) || item.state.toLowerCase().includes(inputValue);
+        showResult(matches);
+      }
+
+      function showResult(matches) {
+        list.innerHTML = "";
+        matches.forEach((item) => {
+          const listItem = document.createElement("li");
+          listItem.innerHTML = `<span> ${item.city}, ${item.state}</span> <span class="population">${item.population}</span>`;
+          list.append(listItem);
+        });
+      }
+
+      input.addEventListener("input", handleMatch);
+    </script>
+  </body>
 </html>
