--- a/09 - Dev Tools Domination/index-START.html
+++ b/09 - Dev Tools Domination/index-START.html
@@ -1,47 +1,76 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Console Tricks!</title>
-  <link rel="icon" href="https://fav.farm/🔥" />
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <title>Console Tricks!</title>
+    <link rel="icon" href="https://fav.farm/🔥" />
+  </head>
+  <body>
+    <p onClick="makeGreen()">×BREAK×DOWN×</p>
 
-  <p onClick="makeGreen()">×BREAK×DOWN×</p>
+    <script>
+      const dogs = [
+        { name: "Snickers", age: 2 },
+        { name: "hugo", age: 8 },
+      ];
 
-  <script>
-    const dogs = [{ name: 'Snickers', age: 2 }, { name: 'hugo', age: 8 }];
+      function makeGreen() {
+        const p = document.querySelector("p");
+        p.style.color = "#BADA55";
+        p.style.fontSize = "50px";
+      }
 
-    function makeGreen() {
-      const p = document.querySelector('p');
-      p.style.color = '#BADA55';
-      p.style.fontSize = '50px';
-    }
+      // Regular
+      console.log("Hello");
 
-    // Regular
+      // Interpolated
+      console.log("Hello, I am a %s string!", "test");
+      // console.log(`Hello, I am a ${var} string!`);
 
-    // Interpolated
+      // Styled
+      console.log("%c I am some great text", "font-size: 30px");
 
-    // Styled
+      // warning!
+      console.warn("warning");
 
-    // warning!
+      // Error :|
+      console.error("error");
 
-    // Error :|
+      // Info
+      console.info("fun fact");
 
-    // Info
+      // Testing
+      const p = document.querySelector("p");
+      console.assert(1 !== 1); //throws an erro if it's false. if it is true, nothing will happen
 
-    // Testing
+      // clearing
+      // console.clear();
 
-    // clearing
+      // Viewing DOM Elements
+      console.log(p);
+      console.dir(p);
 
-    // Viewing DOM Elements
+      // Grouping together
+      dogs.forEach((dog) => {
+        console.groupCollapsed(`${dog.name}`);
+        console.log(`this is ${dog.name}`);
+        console.log(`${dog.name} is ${dog.age}`);
+        console.groupEnd(`${dog.name}`);
+      });
 
-    // Grouping together
+      // counting
+      console.count("number");
+      console.count("number");
+      console.count("number");
 
-    // counting
+      // timing
+      console.time("fetching data");
+      fetch("https://api.github.com/users/wesbos")
+        .then((res) => res.json())
+        .then((data) => console.timeEnd("fetching data"));
 
-    // timing
-
-  </script>
-</body>
+      //table
+      console.table(dogs);
+    </script>
+  </body>
 </html>
