--- a/14 - JavaScript References VS Copying/index-START.html
+++ b/14 - JavaScript References VS Copying/index-START.html
@@ -1,57 +1,81 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>JS Reference VS Copy</title>
-  <link rel="icon" href="https://fav.farm/🔥" />
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <title>JS Reference VS Copy</title>
+    <link rel="icon" href="https://fav.farm/🔥" />
+  </head>
+  <body>
+    <script>
+      // start with strings, numbers and booleans. If we update these, the original will stay the same because
+      let age = 100;
+      let age2 = age;
+      console.log(age, age2);
+      age = 200;
+      console.log(age, age2);
 
-  <script>
-    // start with strings, numbers and booleans
+      let name = "Jaimie";
+      let name2 = name;
+      console.log(name, name2);
+      name = "Jaim";
+      console.log(name, name2);
 
-    // Let's say we have an array
-    const players = ['Wes', 'Sarah', 'Ryan', 'Poppy'];
+      // Let's say we have an array
+      const players = ["Wes", "Sarah", "Ryan", "Poppy"];
 
-    // and we want to make a copy of it.
+      // and we want to make a copy of it.
 
-    // You might think we can just do something like this:
+      // You might think we can just do something like this:
+      const team = players;
+      console.log(players, team);
 
-    // however what happens when we update that array?
+      // however what happens when we update that array?
+      // team[3] = "Luc";
 
-    // now here is the problem!
+      // now here is the problem! oh no - we have edited the original array too!
 
-    // oh no - we have edited the original array too!
+      // Why? It's because that is an array reference, not an array copy. They both point to the same array!
 
-    // Why? It's because that is an array reference, not an array copy. They both point to the same array!
+      // So, how do we fix this? We take a copy instead!
 
-    // So, how do we fix this? We take a copy instead!
+      // one way
 
-    // one way
+      const team2 = players.slice();
+      console.log(team2);
 
-    // or create a new array and concat the old one in
+      // or create a new array and concat the old one in
+      const team3 = [].concat(players);
 
-    // or use the new ES6 Spread
+      // or use the new ES6 Spread
+      const team4 = [...players];
 
-    // now when we update it, the original one isn't changed
+      const team5 = Array.from(players);
 
-    // The same thing goes for objects, let's say we have a person object
+      // now when we update it, the original one isn't changed
 
-    // with Objects
-    const person = {
-      name: 'Wes Bos',
-      age: 80
-    };
+      // The same thing goes for objects, let's say we have a person object
 
-    // and think we make a copy:
+      // with Objects
+      const person = {
+        name: "Wes Bos",
+        age: 80,
+      };
 
-    // how do we take a copy instead?
+      // and think we make a copy:
+      const captain = person;
+      // captain.age = 99;
+      // console.log(person); //output is age: 99
 
-    // We will hopefully soon see the object ...spread
+      // how do we take a copy instead? Object.assign. Start with a blank object as the first argument, then pass the object you want to copy, then pass the properties you want to overwrite
+      const cap2 = Object.assign({}, person, { age: 99 });
+      console.log(cap2);
 
-    // Things to note - this is only 1 level deep - both for Arrays and Objects. lodash has a cloneDeep method, but you should think twice before using it.
+      // We will hopefully soon see the object ...spread
+      cap3 = { ...person };
+      cap3.age = 99;
+      console.log(person, cap3);
 
-  </script>
-
-</body>
+      // Things to note - this is only 1 level deep - both for Arrays and Objects. lodash has a cloneDeep method, but you should think twice before using it.
+    </script>
+  </body>
 </html>
