--- a/15 - LocalStorage/index-START.html
+++ b/15 - LocalStorage/index-START.html
@@ -52,12 +52,18 @@
         <input type="text" name="item" placeholder="Item Name" required />
         <input type="submit" value="+ Add Item" />
       </form>
+      <button type="button" class="delete-all-button">Delete All</button>
+      <button type="button" class="check-all-button">Check All</button>
+      <button type="button" class="uncheck-all-button">Uncheck All</button>
     </div>
 
     <script>
       const addItems = document.querySelector(".add-items");
       const itemsList = document.querySelector(".plates");
       const items = JSON.parse(localStorage.getItem("items")) || [];
+      const deleteAllBtn = document.querySelector(".delete-all-button");
+      const checkAllBtn = document.querySelector(".check-all-button");
+      const uncheckAllBtn = document.querySelector(".uncheck-all-button");
 
       function addItem(e) {
         e.preventDefault();
@@ -92,16 +98,39 @@
           return;
         }
         const element = e.target;
-        console.log(e.target);
-        console.log(element.dataset.index);
         const index = element.dataset.index;
         items[index].done = !items[index].done;
         localStorage.setItem("items", JSON.stringify(items));
         populateList(items, itemsList);
       }
 
+      function handleDeleteAll() {
+        items.length = 0;
+        localStorage.setItem("items", JSON.stringify(items));
+        populateList(items, itemsList);
+      }
+
+      function toggleCheckAll() {
+        items.forEach((item) => {
+          item.done = true;
+        });
+        localStorage.setItem("items", JSON.stringify(items));
+        populateList(items, itemsList);
+      }
+
+      function toggleUncheckAll() {
+        items.forEach((item) => {
+          item.done = false;
+        });
+        localStorage.setItem("items", JSON.stringify(items));
+        populateList(items, itemsList);
+      }
+
       addItems.addEventListener("submit", addItem);
       itemsList.addEventListener("click", toggleDone);
+      deleteAllBtn.addEventListener("click", handleDeleteAll);
+      checkAllBtn.addEventListener("click", toggleCheckAll);
+      uncheckAllBtn.addEventListener("click", toggleUncheckAll);
 
       populateList(items, itemsList);
     </script>
